# wormhole-cosmos-experiments

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  create-token-account.js  eslint.config.js  experiment.test.js  generateVaa.js  localDev.test.js  package.json  parsePayload.js  registryHelpers.js  txHelpers.js  vaaHelpers.js  wrap-sol.js
docs/: vaa.md
helpers/: bridge.js
scripts/: base.js  create-token-account.js  experiment.js  wrap-sol.js
solana/: Makefile  helpers.js  package.json
solana/counter-program/: Dockerfile  README.md  compose.yaml  package.json
solana/counter-program/program/: Cargo.toml
solana/counter-program/tests/: test.js
solana/program/: Cargo.toml
solana/program/src/: lib.rs
solana/program/tests/: common.rs  integration.rs
solana/program/tests/artifacts/: token_bridge-keypair.json
solana/tests/: counter.test.js
tests/: bridge-usdc.test.js  bridge.test.js
wormhole/: .env.example  README.md  package.json
wormhole/devnet/: Makefile
wormhole/devnet/helpers/: create-token-account.js  vaaHelpers.js
wormhole/devnet/tests/: localDev.test.js
