[package]
name = "counter-solana-native"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.9.3"
solana-program = "=1.10.31"
wormhole-bridge-solana = { git = "https://github.com/wormhole-foundation/wormhole", subdirectory = "solana/bridge/program", features = ["cpi"] }
token-bridge = { git = "https://github.com/wormhole-foundation/wormhole", subdirectory = "solana/modules/token_bridge/program", features = ["cpi"] }
solitaire = { git = "https://github.com/wormhole-foundation/wormhole", subdirectory = "solana/solitaire/program" }
byteorder = "1.4.3"
sha3 = "0.9.1"

[dev-dependencies]
hex = "*"
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.6.0", features = [] }
rand = "0.7.3"
solana-program-test = "=1.10.31"
solana-sdk = "=1.10.31"